<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="30"
            android:gravity="start">

            <Button
                android:id="@+id/btn_coupe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_coupe"
                android:onClick="onClick" />

            <Button
                android:id="@+id/btn_sedan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_sedan"
                android:onClick="onClick" />

            <Button
                android:id="@+id/btn_van"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_van"
                android:onClick="onClick" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="40"
            android:gravity="center">

            <Button
                android:id="@+id/btn_minivan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_minivan"
                android:onClick="onClick" />

            <Button
                android:id="@+id/btn_suv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_suv"
                android:onClick="onClick" />

            <Button
                android:id="@+id/btn_truck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_truck"
                android:onClick="onClick" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="30"
            android:gravity="end">

            <Button
                android:id="@+id/btn_bike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_bike"
                android:onClick="onClick" />

            <Button
                android:id="@+id/btn_boat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_boat"
                android:onClick="onClick" />

            <Button
                android:id="@+id/btn_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_other"
                android:onClick="onClick" />

        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>