<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/label_make"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:text="@string/label_make" />

    <EditText
        android:id="@+id/edit_make"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/label_make" />

    <TextView
        android:id="@+id/label_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_make"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:text="@string/label_model"/>

    <EditText
        android:id="@+id/edit_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_make"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/label_model" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_model"
        android:layout_margin="16dp"
        android:text="@string/btn_save" />

</RelativeLayout>